--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "dotenv -e .env.dev next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cz": "czg",
+    "commit": "git-cz"
   },
   "dependencies": {
     "@nextui-org/react": "^2.6.10",
@@ -24,11 +26,19 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cz-git": "^1.11.0",
+    "czg": "^1.11.0",
     "dotenv-cli": "^8.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git",
+      "useEmoji": true
+    }
   }
 }
