--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.15.0",
     "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
