feat: :sparkles: add react-slick and slick-carousel dependencies and types

--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "cz-git": "^1.11.0",
     "czg": "^1.11.0",
     "dotenv-cli": "^8.0.0",
