feat: :sparkles: add test script for development environment in package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "dotenv -e .env.dev next dev",
+    "test": "dotenv -e .env.test next dev",
     "build": "next build",
     "build:dev": "dotenv -e .env.dev next build",
     "build:test": "dotenv -e .env.test next build",
